[package]
name = "s3-event-sqs-clear-cloudfront-cache"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
anyhow = "1.0.79"
aws-config = { version = "1.1.3", features = ["behavior-version-latest"] }
aws-sdk-cloudfront = "1.11.0"
aws-sdk-sqs = "1.12.0"
aws_lambda_events = { version = "0.12.0", default-features = false, features = ["eventbridge"] }
itertools = "0.12.0"
lambda_runtime = "0.8.3"
rayon = "1.8.1"
serde_json = "1.0.111"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
uuid = { version = "1.7.0", features = ["v4"] }

